<resources>
    <string name="app_name">GitHubApp</string>

    <string name="repository_name">Nombre del repositorio</string>
    <string name="repository_description">Descripción del repositorio lorem ipsum dolor sit amet…</string>

    <string name="username">username</string>
    <string name="user_name">Nombre Apellido</string>
    <string name="desc">Imagen del usuario en GitHub</string>

    <string name="forks_amount">640</string>
    <string name="fork_desc">Fork icon</string>
    <string name="star_gazers_amount">98</string>
    <string name="star_desc">Star icon</string>


    <string name="open_pull_request_amount">16</string>
    <string name="open_pull_request">abiertos</string>
    <string name="slash">/</string>
    <string name="closed_pull_request_amount">800</string>
    <string name="closed_pull_request">cerrados</string>

    <string name="pull_request_title">Título Pull Request</string>
    <string name="pull_request_body">Cuerpo pull request lorem ipsum dolor sit amet…</string>

    <string name="error_message">Error</string>
</resources>