<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/repositoryCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="0dp"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Left side -->
            <TextView
                android:id="@+id/txtRepositoryName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/repository_name" />

            <TextView
                android:id="@+id/txtRepositoryDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRepositoryName"
                tools:text="@string/repository_description" />

            <ImageView
                android:id="@+id/ivForks"
                android:contentDescription="@string/fork_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingTop="8dp"
                android:src="@drawable/ic_code_fork_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRepositoryDescription" />

            <TextView
                android:id="@+id/txtForksAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/yellow_mustard"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivForks"
                app:layout_constraintTop_toBottomOf="@+id/txtRepositoryDescription"
                tools:text="@string/forks_amount"/>

            <ImageView
                android:id="@+id/ivStars"
                android:contentDescription="@string/star_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingTop="6dp"
                android:src="@drawable/ic_star_icon"
                app:layout_constraintStart_toEndOf="@+id/txtForksAmount"
                app:layout_constraintTop_toBottomOf="@+id/txtRepositoryDescription" />

            <TextView
                android:id="@+id/txtStarGazersAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/yellow_mustard"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivStars"
                app:layout_constraintTop_toBottomOf="@+id/txtRepositoryDescription"
                tools:text="@string/star_gazers_amount"/>

            <!-- Right side -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:id="@+id/pbRepositoryUserImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/ivRepositoryUserImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/desc" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:text="@string/username"/>

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/txtUsername"
                tools:text="@string/user_name"/>

            <!-- Guideline -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>