<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pullRequestCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="0dp"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtPullRequestTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/pull_request_title"/>

            <TextView
                android:id="@+id/txtPullRequestBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPullRequestTitle"
                tools:text="@string/pull_request_body"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPullRequestBody">

                <ProgressBar
                    android:id="@+id/pbPullRequestUserImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/ivPullRequestUserImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/desc"
                    tools:srcCompat="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/purple_500"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/txtPullRequestBody"
                tools:text="@string/username"/>

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/user_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>